--- a/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
+++ b/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
@@ -1,25 +1,123 @@
-<!-- <ul>
-  <li *ngFor="let produto of produtos">
-    <img [src]="produto.imagem" alt="{{produto.nome}}">
-    <h2>{{ produto.nome }}</h2>
-    <p>{{ produto.descricao }}</p>
-    <p><strong>Preço:</strong> {{ produto.preco }}</p>
-    <p><strong>Categoria:</strong> {{ produto.categoria.nome }}</p>
-  </li>
-</ul> -->
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 
-<ul>
-  <li *ngFor="let produto of produtos">
-    <div class="card" style="width: 18rem;">
-      <div class="card-body">
-        <h5 class="card-title">{{ produto.nome }}</h5>
-        <p class="card-text">{{ produto.descricao }}</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+<div *ngIf="authService.getCurrentUser()">
+  Olá, {{ authService.getCurrentUser()?.login }}!
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="container mt-5">
+
+  <h2 class="mb-2 text-center">Produtos</h2>
+
+  <div class="d-flex justify-content-end mb-2">
+    <button (click)="navigateToCarrinho()" type="button" class="mb-1 btn btn-light">
+      <span class="material-symbols-outlined align-middle">
+        shopping_cart
+      </span>
+    </button>
+  </div>
+
+  <div class="d-flex justify-content-around flex-wrap">
+    <div class="" *ngFor="let produto of produtos">
+      <div class="card mb-5" style="width: 17rem;">
+        <img [src]="produto.imagem" alt="{{produto.nome}}" class="card-img-top">
+        <div class="card-body d-flex flex-column align-content-between">
+          <h5 class="card-title text-center">{{ produto.nome }}</h5>
+          <p class="card-text text-center" style="height: 10em;">{{ produto.descricao }}</p>
+          <p class="font-weight-bold fs-4">{{ produto.preco | currency:'BRL' }}</p>
+
+          <!-- Modal Button -->
+          <button class="btn btn-primary mt-2" (click)="openModal(produto.id);">
+            Adicionar
+            <span class="material-symbols-outlined align-middle"> add_shopping_cart </span>
+          </button>
+
+          <!-- Modal -->
+          <div class="modal fade" [ngClass]="{'show': openedModalId === produto.id}"
+            [style.display]="openedModalId === produto.id ? 'block' : 'none'" tabindex="-1"
+            aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">{{ produto.nome }}</h1>
+                  <button type="button" class="btn-close" (click)="closeModal()" data-bs-dismiss="modal"
+                    aria-label="Close"></button>
+                </div>
+
+                <div class="d-flex modal-body justify-content-between">
+                  <span class="text-center align-middle">Quantidade:</span>
+                  <input type="number" class="form-control align-middle" [(ngModel)]="quantidade">
+                </div>
+
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" (click)="closeModal()"
+                    data-bs-dismiss="modal">Fechar</button>
+                  <button type="button" (click)="adicionarAoPedido(produto.id); closeModal()"
+                    class="btn btn-primary">Salvar</button>
+                </div>
+
+              </div>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
-  </li>
-</ul>
+  </div>
 
+  <!-- Toast Sucess-->
+  <div #toastSucessProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade" data-bs-autohide="true"
+    style="position: absolute; bottom: 0; right: 0;">
+    <div class="toast-header">
+      <strong class="me-auto">AtlCommerce</strong>
+      <small>1s atrás</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria- label="Close"></button>
+    </div>
+    <div class="toast-body">
+      <p>Produto adicionado com sucesso!</p>
+    </div>
+  </div>
 
+  <!-- Toast Failed-->
+  <div #toastFailedProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade" data-bs-autohide="true"
+    style="position: absolute; bottom: 0; right: 0;">
+    <div class="toast-header">
+      <strong class="me-auto">AtlCommerce</strong>
+      <small>1s atrás</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria- label="Close"></button>
+    </div>
+    <div class="toast-body">
+      <p>Não foi possível adicionar o produto!</p>
+    </div>
+  </div>
 
+   <!-- Toast Failed Get-->
+   <div #toastFailedGetProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade" data-bs-autohide="true"
+   style="position: absolute; bottom: 0; right: 0;">
+   <div class="toast-header">
+     <strong class="me-auto">AtlCommerce</strong>
+     <small>1s atrás</small>
+     <button type="button" class="btn-close" data-bs-dismiss="toast" aria- label="Close"></button>
+   </div>
+   <div class="toast-body">
+     <p>Erro ao obter produtos!</p>
+   </div>
+ </div>
 
+</div>
