--- a/frontend/atlcommerce/src/app/login/login/login.component.html
+++ b/frontend/atlcommerce/src/app/login/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+<div class="d-flex justify-content-center align-items-center" id="fundoLogin" style="height: 100vh;">
   <div class="main">
     <input type="checkbox" id="chk" aria-hidden="true">
 
