--- a/frontend/atlcommerce/src/app/carrinho/carrinho/carrinho.component.html
+++ b/frontend/atlcommerce/src/app/carrinho/carrinho/carrinho.component.html
@@ -1,10 +1,4 @@
-<link rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
-<link rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
-<div class="container mt-5">
+<div class="container" style="height: 100vh;">
 
   <a routerLink="/produtos" class="btn btn-primary mt-2 mb-2"><span class="material-symbols-outlined align-middle">
       arrow_back
@@ -49,8 +43,8 @@
   </div>
 
   <!-- Toast Sucess-->
-  <div #toastSucessCarrinho role="alert" aria-live="assertive" aria-atomic="true" class="toast fade" data-bs-autohide="true"
-    style="position: absolute; bottom: 0; right: 0;">
+  <div #toastSucessCarrinho role="alert" aria-live="assertive" aria-atomic="true" class="toast fade"
+    data-bs-autohide="true" style="position: absolute; bottom: 0; right: 0;">
     <div class="toast-header">
       <strong class="me-auto">AtlCommerce</strong>
       <small>1s atrás</small>
