--- a/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
+++ b/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
@@ -1,26 +1,4 @@
-<link rel="stylesheet"
-  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-
-<div *ngIf="authService.getCurrentUser()">
-  Olá, {{ authService.getCurrentUser()?.login }}!
-</div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="container mt-5">
+<div class="container">
 
   <h2 class="mb-2 text-center">Produtos</h2>
 
@@ -33,13 +11,13 @@
   </div>
 
   <div class="d-flex justify-content-around flex-wrap">
-    <div class="" *ngFor="let produto of produtos">
+    <div *ngFor="let produto of produtos">
       <div class="card mb-5" style="width: 17rem;">
-        <img [src]="produto.imagem" alt="{{produto.nome}}" class="card-img-top">
+        <img [src]="produto.imagem" alt="{{produto.nome}}" class="card-img-top" height="250px" width="250px">
         <div class="card-body d-flex flex-column align-content-between">
-          <h5 class="card-title text-center">{{ produto.nome }}</h5>
-          <p class="card-text text-center" style="height: 10em;">{{ produto.descricao }}</p>
-          <p class="font-weight-bold fs-4">{{ produto.preco | currency:'BRL' }}</p>
+          <div class="text-center" style="height: 8em;"><h5 class="card-title text-center">{{ produto.nome }}</h5></div>
+          <div class="text-center" style="height: 8em;"><p class="card-text text-center">{{ produto.descricao }}</p></div>
+          <div class="text-center" style="height: 5em;"><p class="font-weight-bold fs-4">{{ produto.preco | currency:'BRL' }}</p></div>
 
           <!-- Modal Button -->
           <button class="btn btn-primary mt-2" (click)="openModal(produto.id);">
