--- a/frontend/atlcommerce/src/app/carrinho/carrinho/carrinho.component.html
+++ b/frontend/atlcommerce/src/app/carrinho/carrinho/carrinho.component.html
@@ -12,7 +12,7 @@
 
       <table class="table table-bordered table-striped">
         <thead>
-          <tr>
+          <tr class="align-middle text-center">
             <th>Produto</th>
             <th>Nome</th>
             <th>Descrição</th>
