--- a/frontend/atlcommerce/src/app/historicoPedidos/historico-pedidos/historico-pedidos.component.html
+++ b/frontend/atlcommerce/src/app/historicoPedidos/historico-pedidos/historico-pedidos.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="container" style="height: 100vh;">
 
   <a routerLink="/produtos" class="btn btn-primary mt-2 mb-2"><span class="material-symbols-outlined align-middle">
       arrow_back
