--- a/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
+++ b/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
@@ -1,8 +1,13 @@
-<div class="container">
+<div class="container" style="min-height: 100vh;">
 
   <h2 class="mb-2 text-center">Produtos</h2>
 
-  <div class="d-flex justify-content-end mb-2">
+  <div class="d-flex justify-content-between mb-2">
+    <button (click)="navigateToLogin()" type="button" class="mb-1 btn btn-light">
+      <span class="material-symbols-outlined">
+        login
+      </span>
+    </button>
     <button (click)="navigateToCarrinho()" type="button" class="mb-1 btn btn-light">
       <span class="material-symbols-outlined align-middle">
         shopping_cart
@@ -15,9 +20,15 @@
       <div class="card mb-5" style="width: 17rem;">
         <img [src]="produto.imagem" alt="{{produto.nome}}" class="card-img-top" height="250px" width="250px">
         <div class="card-body d-flex flex-column align-content-between">
-          <div class="text-center" style="height: 8em;"><h5 class="card-title text-center">{{ produto.nome }}</h5></div>
-          <div class="text-center" style="height: 8em;"><p class="card-text text-center">{{ produto.descricao }}</p></div>
-          <div class="text-center" style="height: 5em;"><p class="font-weight-bold fs-4">{{ produto.preco | currency:'BRL' }}</p></div>
+          <div class="text-center" style="height: 8em;">
+            <h5 class="card-title text-center">{{ produto.nome }}</h5>
+          </div>
+          <div class="text-center" style="height: 8em;">
+            <p class="card-text text-center">{{ produto.descricao }}</p>
+          </div>
+          <div class="text-center" style="height: 5em;">
+            <p class="font-weight-bold fs-4">{{ produto.preco | currency:'BRL' }}</p>
+          </div>
 
           <!-- Modal Button -->
           <button class="btn btn-primary mt-2" (click)="openModal(produto.id);">
@@ -38,9 +49,9 @@
                     aria-label="Close"></button>
                 </div>
 
-                <div class="d-flex modal-body justify-content-between">
-                  <span class="text-center align-middle">Quantidade:</span>
-                  <input type="number" class="form-control align-middle" [(ngModel)]="quantidade">
+                <div class="d-flex modal-body justify-content-evenly">
+                  <div><span class="text-center align-middle">Quantidade:</span></div>
+                  <div><input type="number" class="form-control align-middle" [(ngModel)]="quantidade"></div>
                 </div>
 
                 <div class="modal-footer">
@@ -60,8 +71,8 @@
   </div>
 
   <!-- Toast Sucess-->
-  <div #toastSucessProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade" data-bs-autohide="true"
-    style="position: absolute; bottom: 0; right: 0;">
+  <div #toastSucessProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade"
+    data-bs-autohide="true" style="position: absolute; bottom: 0; right: 0;">
     <div class="toast-header">
       <strong class="me-auto">AtlCommerce</strong>
       <small>1s atrás</small>
@@ -73,8 +84,8 @@
   </div>
 
   <!-- Toast Failed-->
-  <div #toastFailedProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade" data-bs-autohide="true"
-    style="position: absolute; bottom: 0; right: 0;">
+  <div #toastFailedProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade"
+    data-bs-autohide="true" style="position: absolute; bottom: 0; right: 0;">
     <div class="toast-header">
       <strong class="me-auto">AtlCommerce</strong>
       <small>1s atrás</small>
@@ -85,17 +96,17 @@
     </div>
   </div>
 
-   <!-- Toast Failed Get-->
-   <div #toastFailedGetProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade" data-bs-autohide="true"
-   style="position: absolute; bottom: 0; right: 0;">
-   <div class="toast-header">
-     <strong class="me-auto">AtlCommerce</strong>
-     <small>1s atrás</small>
-     <button type="button" class="btn-close" data-bs-dismiss="toast" aria- label="Close"></button>
-   </div>
-   <div class="toast-body">
-     <p>Erro ao obter produtos!</p>
-   </div>
- </div>
+  <!-- Toast Failed Get-->
+  <div #toastFailedGetProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade"
+    data-bs-autohide="true" style="position: absolute; bottom: 0; right: 0;">
+    <div class="toast-header">
+      <strong class="me-auto">AtlCommerce</strong>
+      <small>1s atrás</small>
+      <button type="button" class="btn-close" data-bs-dismiss="toast" aria- label="Close"></button>
+    </div>
+    <div class="toast-body">
+      <p>Erro ao obter produtos!</p>
+    </div>
+  </div>
 
 </div>
