ajustando cores e tamanhos

--- a/frontend/atlcommerce/src/app/carrinho/carrinho/carrinho.component.html
+++ b/frontend/atlcommerce/src/app/carrinho/carrinho/carrinho.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="height: 100vh;">
 
-  <a routerLink="/produtos" class="btn btn-primary mt-2 mb-2"><span class="material-symbols-outlined align-middle">
+  <a routerLink="/produtos" class="btn btn-light mt-2 mb-2"><span class="material-symbols-outlined align-middle">
       arrow_back
     </span></a>
 
