--- a/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
+++ b/frontend/atlcommerce/src/app/produtos/produtos/produtos.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="min-height: 100vh;">
 
-  <h2 class="mb-2 text-center">Produtos</h2>
+  <h2 class="mb-2 text-center text-white">Produtos</h2>
 
   <div class="d-flex justify-content-between mb-2">
     <button (click)="navigateToLogin()" type="button" class="mb-1 btn btn-light">
@@ -84,7 +84,7 @@
   </div>
 
   <!-- Toast Failed-->
-  <div #toastFailedProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade"
+  <div #toastFailedProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast bg-danger text-white fade"
     data-bs-autohide="true" style="position: absolute; bottom: 0; right: 0;">
     <div class="toast-header">
       <strong class="me-auto">AtlCommerce</strong>
@@ -97,7 +97,7 @@
   </div>
 
   <!-- Toast Failed Get-->
-  <div #toastFailedGetProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast fade"
+  <div #toastFailedGetProduto role="alert" aria-live="assertive" aria-atomic="true" class="toast bg-danger text-white fade"
     data-bs-autohide="true" style="position: absolute; bottom: 0; right: 0;">
     <div class="toast-header">
       <strong class="me-auto">AtlCommerce</strong>
