--- a/frontend/atlcommerce/src/app/historicoPedidos/historico-pedidos/historico-pedidos.component.html
+++ b/frontend/atlcommerce/src/app/historicoPedidos/historico-pedidos/historico-pedidos.component.html
@@ -1,10 +1,10 @@
 <div class="container" style="height: 100vh;">
 
-  <a routerLink="/produtos" class="btn btn-primary mt-2 mb-2"><span class="material-symbols-outlined align-middle">
+  <a routerLink="/produtos" class="btn btn-light mt-2 mb-2"><span class="material-symbols-outlined align-middle">
       arrow_back
     </span></a>
 
-  <h2>Histórico de pedidos</h2>
+  <h2 class="text-white">Histórico de pedidos</h2>
 
   <div *ngFor="let pedido of pedidos">
     <div class="card mt-3">
